# automactic

./: .gitignore  README.md  db.sqlite3  debug.env  deploy_sse.py  deploy_update.sh  hooks.json  manage.py  pyproject.toml  requirements.txt  scratch.txt  setenviron.txt
admin/: admin.py  apps.py  auth.py  urls.py
admin/views/: __init__.py  debug.py  internal.py
automactic/: asgi.py  settings.py  urls.py  wsgi.py
automactic/settings/: __init__.py  base.py  dev.py  prod.py
deploy/: deploy_main.sh  notes.txt
deploy/main/: config.env  deploy_main.sh  dnsmasq.conf  pgadmin.sh  pgadmin4.service
deploy/pi/: 10-ap0.link  30-ap0.network  eth0.network  firstboot.service  firstboot.sh  hostapd-ap0.conf  hostapd.conf  hostapd@.service  vxlan.netdev  vxlan.network
fixtures/: usertypes.json
interface/: api-automatic.py  api.py  cppm_api.py  cppm_iface.py  rotating_passwd.py  wrapper.py
login/: admin.py  apps.py  fields.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
login/admin/: __init__.py  history.py  loginhistory.py  permissions.py  session.py  user.py  usertype.py
login/fixtures/: admin_permissions.json  default_permissions.json  default_userTypes.json
login/forms/: __init__.py  adminUserModify.py  login.py  user.py  userLogin.py
login/migrations/: 0001_initial.py  0002_auto_20210803_1007.py  0003_auto_20210805_1043.py
login/models/: __init__.py  history.py  loginhistory.py  permissions.py  user.py  userSession.py  usertype.py
login/static/: logo1.svgz  (+5 more)
logs/: django.log.2022-07-06
setup/: kiosk.service  kiosk.sh  kioskdjango.service  kioskdjango.sh  setup.sh  uninstall.sh
siteconfig/: apps.py  defaults.py
templates/: admin_index.html  base.html  debug.html  error.html  index.html  instructions.html  login.html  login_page.html  success.html  teachers.html
(+66 files in other folders)
