[tool.poetry]
name = "automactic"
version = "3.0.0"
description = ""
authors = ["Ryan Yang <ryang1453@gmail.com>", "Ivan Zheng <zivan7644@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Django = "~4.0"
netaddr = "~0.8"        # Used for Mac Address Parsing
django-ipware = "~4.0"  # Used to more reliably obtain IP address behind a proxy
psycopg2 = "~2.9"       # Used for Prod DB

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

