[tool.poetry]
name = "automactic"
version = "3.0.0"
description = ""
authors = ["Ryan Yang <ryang1453@gmail.com>", "Ivan Zheng <zivan7644@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Django = "~4.0"
django-debug-toolbar = "~3.5"   # Debug Info on Site
django-ipware = "~4.0"          # Used to more reliably obtain IP address behind a proxy
django-macaddress = "~1.8"      # Mac Address Fields
netaddr = "~0.8"                # Used for Mac Address Parsing
psycopg2 = "~2.9"               # Used for Prod DB
httpx = "~0.23"                 # Used for API
uvicorn = "~0.18"               # used for deploy

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

